<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/login" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@android:color/black" />


    <RelativeLayout
        android:id="@+id/login_lyt_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/login_lyt_bottom"
        android:paddingLeft="@dimen/activity_padding_large"
        android:paddingRight="@dimen/activity_padding_large"
        android:paddingTop="@dimen/activity_padding_large">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/edt_email">

            <ImageView
                android:id="@+id/img_app_logo"
                android:layout_width="@dimen/lg_app_logo_width"
                android:layout_height="@dimen/lg_app_logo_height"
                android:layout_centerInParent="true"
                android:src="@drawable/fitmama" />

        </RelativeLayout>


        <com.fitsoo.view.CustomEdittext
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edt_password"
            android:layout_marginTop="@dimen/_margin_forms_distribution"
            android:alpha="0.8"
            android:gravity="left"
            android:background="@drawable/edittext_bg"
            android:drawableLeft="@mipmap/mail_grey"
            android:drawablePadding="@dimen/activity_padding_small"
            android:hint="Email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/activity_padding_small"
            android:tag="100"
            android:textColor="@color/white"
            android:textColorHint="@color/alpha_white" />

        <com.fitsoo.view.CustomEdittext
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_btnlogin"
            android:layout_marginTop="@dimen/_margin_forms_distribution"
            android:alpha="0.8"
            android:gravity="left"
            android:background="@drawable/edittext_bg"
            android:drawableLeft="@mipmap/password_grey"
            android:drawablePadding="@dimen/activity_padding_small"
            android:hint="Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/activity_padding_small"
            android:tag="100"
            android:textColor="@color/white"
            android:textColorHint="@color/alpha_white" />

        <com.fitsoo.view.CustomButton
            android:id="@+id/login_btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtforgotpwd"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@drawable/bg_pink_small_rounded_corner"
            android:tag="100"
            android:text="@string/login_txt_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_medium_text_size" />

        <com.fitsoo.view.CustomTextView
            android:id="@+id/txtforgotpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_or_option"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15dp"
            android:tag="103"
            android:text="@string/login_txt_forgotpwd"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_textsize_small" />

        <LinearLayout
            android:id="@+id/ll_or_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_social_option"
            android:layout_marginBottom="@dimen/_15dp"
            android:layout_marginTop="@dimen/_15dp"
            android:gravity="center_vertical"
            android:weightSum="3">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/line" />

            <com.fitsoo.view.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.8"
                android:gravity="center"
                android:tag="103"
                android:text="@string/login_txt_loginwith"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/activity_textsize_medium" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/line" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_social_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/txt_terms_and_conditions">


            <LinearLayout
                android:id="@+id/btnfacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_margin_small"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:background="@color/fbblue"
                android:gravity="center">

                <com.fitsoo.view.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/activity_padding_small"
                    android:gravity="center_vertical"
                    android:padding="@dimen/fb_gplus_padding"
                    android:tag="100"
                    android:text="@string/login_txt_facebook"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_medium_text_size"
                    app:drawableLeftCompat="@drawable/ic_facebook" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_google"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_small"
                android:background="@color/google"
                android:gravity="center">

                <com.fitsoo.view.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:drawableLeftCompat="@drawable/ic_gpluic_s"
                    android:drawablePadding="@dimen/activity_padding_small"
                    android:gravity="center_vertical"
                    android:padding="@dimen/fb_gplus_padding"
                    android:tag="100"
                    android:text="@string/login_txt_google"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_medium_text_size" />

            </LinearLayout>


        </LinearLayout>


        <com.fitsoo.view.CustomTextView
            android:id="@+id/txt_terms_and_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:alpha="0.7"
            android:gravity="center"
            android:tag="103"
            android:text="@string/login_txt_terms"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/activity_textsize_small" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/login_lyt_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/nav_bg"
        android:gravity="center"
        android:padding="@dimen/activity_padding_medium">


        <com.fitsoo.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="103"
            android:text="@string/login_txt_newmember"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_medium_text_size" />

        <com.fitsoo.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_xtrasmall"
            android:tag="101"
            android:text="@string/login_txt_signup"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_medium_text_size" />
    </LinearLayout>
</RelativeLayout>
