<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/welcome" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@android:color/black" />


    <ImageView
        android:id="@+id/signup_img_goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:padding="@dimen/activity_padding_small"
        android:src="@mipmap/grey_back" />


    <RelativeLayout
        android:id="@+id/login_lyt_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_padding_large"
        android:paddingRight="@dimen/activity_padding_large"
        android:paddingTop="@dimen/activity_padding_large">


        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/su_welcome_size"
            android:layout_height="@dimen/su_welcome_size"
            android:layout_above="@+id/txt_welcome_message"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/profile_avtar"
            app:civ_border_color="@color/white"
            app:civ_border_width="@dimen/_1dp" />

        <com.fitsoo.view.CustomTextView
            android:id="@+id/txt_welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_welcome_name"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30dp"
            android:gravity="center_horizontal"
            android:tag="103"
            android:text="@string/str_static_welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/_medium_text_size" />

        <com.fitsoo.view.CustomTextView
            android:id="@+id/txt_welcome_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_info_email"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:tag="103"
            android:text="SARAH!"
            android:textColor="@color/white"
            android:textSize="@dimen/_medium_text_size"
            android:textStyle="bold" />


        <com.fitsoo.view.CustomTextView
            android:id="@+id/txt_info_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_lets_get_started"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center_horizontal"
            android:tag="103"
            android:text="@string/str_ready_to_geT_fit"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/_medium_text_size" />

        <com.fitsoo.view.CustomButton
            android:id="@+id/btn_lets_get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/bg_pink_small_rounded_corner"
            android:tag="100"
            android:text="@string/str_lets_start"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_medium_text_size" />

    </RelativeLayout>
</RelativeLayout>
